--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -136,7 +136,7 @@ td[class="spechide"]
  .contentEditable h2.bigger,.contentEditable h1.bigger{
   font-size: 37px !important;
 }
-
+changes
 td,table{
   vertical-align: top;
 }
